# ft_printf

./: CMakeLists.txt  Makefile  ft_printf.h  libft.h
libft/: ._ft_realloc.c  ft_abs.c  ft_atoi_base.c  ft_clean_2d.c  ft_clean_str.c  ft_itoa_base.c  ft_join_char.c  ft_pow.c  ft_strjoin.c  ft_strsplit.c
printf/: a.out  ft_handle_specifier.c  ft_printf.c
printf/a.out.dSYM/Contents/Resources/DWARF/: a.out
printf/parssing/: ft_parsing.c  ft_parsing_accuracy.c  ft_parsing_brace.c  ft_parsing_flags.c  ft_parsing_length.c  ft_parsing_specifier.c  ft_parsing_width.c
printf/print/: ft_pointer_to_int.c  ft_print_char.c  ft_print_double.c  ft_print_double_hexdecimal.c  ft_print_exponent.c  ft_print_float.c  ft_print_float_or_exponent.c  ft_print_int.c  ft_print_memory.c  ft_print_nonprintable.c  ft_print_string.c  ft_print_time.c  print_bx.c
printf/utilites/: ._ft_utoa_base.c  ft_change_list.c  ft_choose_color.c  ft_choose_fd.c  ft_clean.c  ft_convert_time.c  ft_cust.c  ft_join_prefix.c  ft_join_symbol.c  ft_join_symbols.c  ft_nbrlen.c  ft_print.c  ft_put_apostrophe.c  ft_utoa_base.c  ft_wchar.c
printf/utilites_for_double/: .nfs.20051399.d1d5  ft_check_inf.c  ft_check_len.c  ft_check_spec_g.c  ft_count_acc_for_a.c  ft_del_zero.c  ft_dot_to_float.c  ft_handle_g.c  ft_handler_double.c  ft_help_a.c  ft_parsing_znak_double.c  ft_round.c  ft_round_double.c
