cmake_minimum_required(VERSION 3.6)
project(liba)

set(CMAKE_CXX_STANDARD 11)

set(SOURCE_FILES
    libft/ft_atoi.c
    libft/ft_bzero.c
    libft/ft_foreach.c
    libft/ft_isalnum.c
    libft/ft_isalpha.c
    libft/ft_isascii.c
    libft/ft_isdigit.c
    libft/ft_isprint.c
    libft/ft_iterative_factorial.c
    libft/ft_itoa.c
    libft/ft_lstadd.c
    libft/ft_lstdel.c
    libft/ft_lstdelone.c
    libft/ft_lstiter.c
    libft/ft_lstmap.c
    libft/ft_lstnew.c
    libft/ft_memalloc.c
    libft/ft_memccpy.c
    libft/ft_memchr.c
    libft/ft_memcmp.c
    libft/ft_memcpy.c
    libft/ft_memdel.c
    libft/ft_memmove.c
    libft/ft_memset.c
    libft/ft_print_params.c
    libft/ft_putchar.c
    libft/ft_putchar_fd.c
    libft/ft_putendl.c
    libft/ft_putendl_fd.c
    libft/ft_putnbr.c
    libft/ft_putnbr_fd.c
    libft/ft_putstr.c
    libft/ft_putstr_fd.c
    libft/ft_realloc.c
    libft/ft_rrange.c
    libft/ft_sort_integer_table.c
    libft/ft_sort_wordtab.c
    libft/ft_sqrt.c
    libft/ft_strcat.c
    libft/ft_strchr.c
    libft/ft_strclr.c
    libft/ft_strcmp.c
    libft/ft_strcpy.c
    libft/ft_strdel.c
    libft/ft_strdup.c
    libft/ft_strequ.c
    libft/ft_striter.c
    libft/ft_striteri.c
    libft/ft_strjoin.c
    libft/ft_strlcat.c
    libft/ft_strlen.c
    libft/ft_strmap.c
    libft/ft_strmapi.c
    libft/ft_strncat.c
    libft/ft_strncmp.c
    libft/ft_strncpy.c
    libft/ft_strnequ.c
    libft/ft_strnew.c
    libft/ft_strnstr.c
    libft/ft_strrchr.c
    libft/ft_strrev.c
    libft/ft_strsplit.c
    libft/ft_strstr.c
    libft/ft_strsub.c
    libft/ft_strtrim.c
    libft/ft_swap.c
    libft/ft_tolower.c
    libft/ft_toupper.c
        libft/ft_clean_2d.c
        libft/ft_clean_str.c
        libft/ft_itoa_base.c
        libft/ft_abs.c
        libft/ft_pow.c
        libft/ft_join_char.c
        libft/ft_atoi_base.c
        ft_printf.h
        libft.h
        printf/ft_handle_specifier.c
        printf/utilites/ft_cust.c
        printf/parssing/ft_parsing.c
        printf/print/ft_print_int.c
        printf/ft_printf.c
        printf/utilites/ft_utoa_base.c
        printf/utilites/ft_join_symbols.c
        printf/print/ft_print_string.c
        printf/print/ft_print_char.c
        printf/print/ft_print_float.c
        printf/parssing/ft_parsing_accuracy.c
        printf/parssing/ft_parsing_width.c
        printf/parssing/ft_parsing_flags.c
        printf/parssing/ft_parsing_length.c
        printf/parssing/ft_parsing_specifier.c
        printf/utilites/ft_join_prefix.c
        printf/utilites/ft_print.c
        printf/utilites/ft_wchar.c
        printf/utilites/ft_join_symbol.c
        printf/utilites/ft_clean.c
        printf/print/ft_print_memory.c
        printf/parssing/ft_parsing_brace.c
        printf/utilites/ft_convert_time.c
        printf/utilites/ft_put_apostrophe.c
        printf/print/ft_print_time.c
        printf/print/ft_print_nonprintable.c
        printf/utilites/ft_choose_color.c
        printf/utilites/ft_choose_fd.c
        printf/utilites/ft_change_list.c
        printf/print/ft_pointer_to_int.c
        printf/utilites_for_double/ft_check_inf.c
        printf/utilites_for_double/ft_round.c
        printf/utilites_for_double/ft_check_len.c
        printf/print/ft_print_exponent.c
        printf/utilites_for_double/ft_parsing_znak_double.c
        printf/utilites_for_double/ft_del_zero.c
        printf/print/ft_print_double.c
        printf/print/ft_print_float_or_exponent.c
        printf/utilites/ft_nbrlen.c
        printf/utilites_for_double/ft_check_spec_g.c
        printf/utilites_for_double/ft_dot_to_float.c
        printf/utilites_for_double/ft_round_double.c
        printf/print/ft_print_double_hexdecimal.c
        printf/utilites_for_double/ft_count_acc_for_a.c)

add_executable(liba ${SOURCE_FILES})